--- a/GeoNode/res/values/strings.xml
+++ b/GeoNode/res/values/strings.xml
@@ -1,8 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="app_name">GeoNode</string>
-    <string name="edit_message">Enter a message</string>
-    <string name="button_send">Send</string>
+    <string name="textfield_username">Username</string>
+    <string name="textfield_password">Password</string>
+    <string name="button_submit">Submit</string>
     <string name="action_settings">Settings</string>
-    <string name="title_activity_main">MainActivity</string>
+    <string name="title_activity_main">Login</string>
+    
+    <!--Debug strings-->
+    <string name="debug_enter">Enter Without Login</string>
 </resources>
