--- a/GeoNode/app/src/main/res/values/strings.xml
+++ b/GeoNode/app/src/main/res/values/strings.xml
@@ -1,11 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <!--Main-->
     <string name="app_name">GeoNode</string>
+    <string name="action_settings">Settings</string>
+
+    <!--Login-->
     <string name="textfield_username">Username</string>
     <string name="textfield_password">Password</string>
     <string name="button_submit">Submit</string>
-    <string name="action_settings">Settings</string>
     <string name="title_activity_main">Login</string>
+
+    <!--Map screen-->
+
 
     <!--Debug strings-->
     <string name="debug_enter">Enter Without Login</string>
