Added temp. login instructions

--- a/GeoNode/app/src/main/res/values/strings.xml
+++ b/GeoNode/app/src/main/res/values/strings.xml
@@ -6,6 +6,7 @@
     <string name="action_settings">Settings</string>
 
     <!-- Login -->
+    <string name="login_instructions">The following punctuation is not allowed:\n@ ! # $ % ^ &amp; * ( ) { } [ ] ? " ' : ;</string>
     <string name="title_activity_main">Login</string>
     <string name="textfield_username">Username</string>
     <string name="textfield_password">Password</string>
