Expanding web services beyond one page

--- a/GeoNode/app/src/main/res/values/strings.xml
+++ b/GeoNode/app/src/main/res/values/strings.xml
@@ -17,10 +17,8 @@
     <string name="button_place_node">Place Node at Current Location</string>
 
     <!--Web Services-->
-    <string name="db_query_url">http://babbage.cs.missouri.edu/~lmp6yb/GeoNode/db.php</string>
-
-    <!--Database Queries-->
-    <string name="query_login">"SELECT COUNT(*) FROM GeoNode.login WHERE username = 123"</string>
+    <string name="db_login_url">http://babbage.cs.missouri.edu/~lmp6yb/GeoNode/login.php</string>
+    <string name="db_map_url">http://babbage.cs.missouri.edu/~lmp6yb/GeoNode/map.php</string>
 
     <!-- Debug strings -->
     <string name="debug_enter">Enter Without Login</string>
