--- a/GeoNode/app/src/main/res/values/strings.xml
+++ b/GeoNode/app/src/main/res/values/strings.xml
@@ -11,6 +11,7 @@
     <string name="textfield_username">Username</string>
     <string name="textfield_password">Password</string>
     <string name="button_submit">Submit</string>
+    <string name="button_register">Register</string>
 
     <!-- Map screen -->
     <string name="title_activity_map">Map</string>
