--- a/GeoNode/app/src/main/res/values/strings.xml
+++ b/GeoNode/app/src/main/res/values/strings.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-
     <!-- Main -->
     <string name="app_name">GeoNode</string>
     <string name="action_settings">Settings</string>
@@ -16,7 +15,7 @@
     <!-- Map screen -->
     <string name="google_maps_key">Map</string>
     <string name="title_activity_map">Map</string>
-    <string name="button_place_node">Place Node at Current Location</string>
+    <string name="button_place_node">Place Node</string>
 
     <!-- Web Services -->
     <string name="db_login_url">http://babbage.cs.missouri.edu/~lmp6yb/GeoNode/login.php</string>
@@ -26,7 +25,5 @@
     <!-- Debug strings -->
     <string name="debug_enter">Admin</string>
     <string name="title_activity_register">RegisterActivity</string>
-    <string name="hello_world">Hello world!</string>
     <string name="title_activity_maps">Map</string>
-
 </resources>
